@startuml monitors

skinparam classAttributeIconSize 0
left to right direction
skinparam captionFontSize 28
caption Рисунок 1.3 – Класи Monitors

' ===== Interfaces =====

interface Monitor {
    + updateWidget(): void
    + saveData(): void
    + getActivityFlag(): boolean
}

interface ActivityAwareMonitor extends Monitor {
    + checkActivity(isActive: boolean): void
}

' ===== Concrete Monitors =====

class CpuMonitor {
    - repo: ProcessorRepository
    + CpuMonitor(repo: ProcessorRepository)
    + updateWidget(): void
    + saveData(): void
    + getActivityFlag(): boolean
}

class MemoryMonitor {
    - memoryRepo: MemoryRepository
    - daysRepo: MonitoringDaysRepository
    + MemoryMonitor(MemoryRepository, MonitoringDaysRepository)
    + updateWidget(): void
    + saveData(): void
    + getActivityFlag(): boolean
    - getMacMemory(): MemoryInfo
}

class WindowMonitor {
    - windowRepo: WindowRepository
    - daysRepo: MonitoringDaysRepository
    - lastWindow: String
    - activeSeconds: int
    + WindowMonitor(WindowRepository, MonitoringDaysRepository)
    + updateWidget(): void
    + saveData(): void
    + getActivityFlag(): boolean
    + checkActivity(isActive: boolean): void
}

class ComputerUsageMonitor {
    - repo: ComputerUsageRepository
    - activeSeconds: int
    + ComputerUsageMonitor(ComputerUsageRepository)
    + updateWidget(): void
    + saveData(): void
    + getActivityFlag(): boolean
    + checkActivity(isActive: boolean): void
}

class KeyboardMonitor {
    - keyCount: int
    + KeyboardMonitor()
    + nativeKeyPressed(): void
    + nativeKeyReleased(): void
    + updateWidget(): void
    + saveData(): void
    + getActivityFlag(): boolean
}

class MouseMonitor {
    - clickCount: int
    - moveCount: int
    + MouseMonitor()
    + nativeMouseClicked(): void
    + nativeMouseMoved(): void
    + updateWidget(): void
    + saveData(): void
    + getActivityFlag(): boolean
}

' ===== Relationships =====

Monitor <|.. ActivityAwareMonitor

Monitor <|.. CpuMonitor
Monitor <|.. MemoryMonitor
Monitor <|.. KeyboardMonitor
Monitor <|.. MouseMonitor

ActivityAwareMonitor <|.. WindowMonitor
ActivityAwareMonitor <|.. ComputerUsageMonitor

CpuMonitor --> ProcessorRepository
MemoryMonitor --> MemoryRepository
MemoryMonitor --> MonitoringDaysRepository
WindowMonitor --> WindowRepository
WindowMonitor --> MonitoringDaysRepository
ComputerUsageMonitor --> ComputerUsageRepository

@enduml
